# lib/api-spec/openapi.yaml
@@ -59,7 +59,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HealthStatus"
+                $ref: "#//HealthStatus"
 
   # ───────────────── AUTH ─────────────────
   /auth/register:
@@ -1279,9 +1279,6 @@ components:
           type: string
         mode:
           type: string
-        mapType:
-          type: string
-          enum: [basic, distorted]
         maxPlayers:
           type: integer
         currentPlayers:
@@ -1298,7 +1295,7 @@ components:
           type: string
         createdAt:
           type: string
-      required: [id, name, ownerId, mode, mapType, maxPlayers, currentPlayers, isPublic, complexity, trapRate, mapWarp, status, createdAt]
+      required: [id, name, ownerId, mode, maxPlayers, currentPlayers, isPublic, complexity, trapRate, mapWarp, status, createdAt]
 
     CreateServerBody:
       type: object
@@ -1307,9 +1304,6 @@ components:
           type: string
         mode:
           type: string
-        mapType:
-          type: string
-          enum: [basic, distorted]
         maxPlayers:
           type: integer
         isPublic:
@@ -1327,9 +1321,6 @@ components:
       properties:
         name:
           type: string
-        mapType:
-          type: string
-          enum: [basic, distorted]
         maxPlayers:
           type: integer
         isPublic:
